examples/cpp/failing/field_visibility_conflict/Right.cc
class MyClass {
    public:
        int field_1;
        char field_3;
}
